--- a/src/Component/NavigationBar/NavBar.css
+++ b/src/Component/NavigationBar/NavBar.css
@@ -1,4 +1,51 @@
 .NavBar {
     position: absolute;
     z-index: 999;
+    width: 100vw;
+    height: 3.125rem;
+    background: #eee;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
+
+.menu-bars {
+    margin-left: 2rem;
+    font-size: 2rem;
+    background: none;
+}
+
+.nav-menu {
+    background: #eee;
+    width: 250px;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    position: fixed;
+    top: 0;
+    left: -100%;
+    transition: 850ms;
+}
+
+.nav-menu.active {
+    left: 0;
+    transition: 350ms;
+}
+
+.nav-menu-items {
+    width: 100%;
+}
+
+.navbar-toggle {
+    background: #eee;
+    width: 100%;
+    height: 80px;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    font-size: 2rem;
+}
+
+.close-btn {
+    padding-left: 2rem;
 }
