--- a/src/Component/NavigationBar/SideBar.css
+++ b/src/Component/NavigationBar/SideBar.css
@@ -8,6 +8,7 @@
     top: 0;
     left: -100%;
     transition: 850ms;
+    border-right: 15px;
 }
 
 .nav-menu.active {
@@ -22,13 +23,38 @@
 .navbar-toggle {
     background: #eee;
     width: 100%;
-    height: 80px;
+    height: 3.125rem;
     display: flex;
     justify-content: start;
     align-items: center;
-    font-size: 2rem;
 }
 
 .close-btn {
     padding-left: 2rem;
+    font-size: 2rem;
+}
+
+.content-box {
+    margin-top: 1.25rem;
+    width: 100%;
+    overflow-y: auto;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.input-text {
+    height: 34px;
+    padding: 0 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    box-sizing: border-box;
+    outline: none;
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075);
+    font-size: 16px;
+}
+
+.input-text:focus {
+    border-color: #51a7e8;
 }
