카드 리스트만 스크롤 하고 싶으나, 안되서 일단 전체영역으로 지정함

--- a/src/Component/NavigationBar/LocationCard.css
+++ b/src/Component/NavigationBar/LocationCard.css
@@ -1,8 +1,8 @@
 .location-card-container {
-    width: 75%;
+    width: 280px;
     padding: 10px 0;
     margin: 10px 0;
-    font-size: 5px;
+    font-size: 10px;
 
     display: flex;
     justify-content: center;
