--- a/src/Component/NavigationBar/LocationCardsList.css
+++ b/src/Component/NavigationBar/LocationCardsList.css
@@ -1,12 +1,9 @@
 .card-list {
-
-    height: 100%;
+    flex: 1;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-
-    padding: 0 10px;
-    overflow-y: scroll;
+    overflow-y: auto;
 
 }
