css 손보고, getday 함수 만듬

--- a/src/Component/Map/CustomOverlay.css
+++ b/src/Component/Map/CustomOverlay.css
@@ -1,10 +1,10 @@
 /* .wrap 
-{   position: absolute;
+{   position: relative;
         left: 0;
-        bottom: 40px;
+        bottom: 0px;
         width: 288px;
         height: 132px;
-        margin-left: -144px;
+        margin-left: 0px;
         text-align: 
     left;
         overflow: 
@@ -16,24 +16,87 @@
         line-height: 1.5;} */
 .wrap * 
 {   padding: 0;
-    margin: 0;}
+    margin: 0;
+}
 .wrap .info 
-{width: 286px;
-    height: 120px;
+{  
+    width: 286px;
+    height: 140px;
     border-radius: 5px;
-    border-bottom: 2px 
-    solid #ccc;
-    border-right: 1px 
-    solid #ccc;
-    overflow: hidden;background: #fff;}
-.wrap .info:nth-child(1) {border: 0;box-shadow: 0px 1px 2px #888;}
-.info .title {padding: 5px 0 0 10px;height: 30px;background: #eee;border-bottom: 1px solid #ddd;font-size: 18px;font-weight: bold;}
+    border-bottom: 2px solid #ccc;
+    border-right: 1px solid #ccc;
+    /* overflow: hidden; */
+    background: #fff;
+    font-size: 13px;
+    font-family: 'Malgun Gothic', dotum, '돋움';
+    line-height: normal;
+    
+}
+.wrap .info:nth-child(1) 
+{   border: 0;
+    box-shadow: 0px 1px 2px #888;
+}
+.info .title 
+{   padding: 15px 0 0 0px;
+    height: 30px;background: #eee;
+    border-bottom: 1px solid #ddd;
+    font-size: 18px;
+    font-weight: bold;
+    font-family: 'Malgun Gothic',
+    dotum, '돋움';
+    text-align: center; 
+}
 
-.info .close:hover {cursor: pointer;}
-.info .body {position: relative;overflow: hidden;}
-.info .desc {position: relative;margin: 5px 0 0 10px;height: 75px;}
-.desc .ellipsis {overflow: hidden;text-overflow: ellipsis;white-space: nowrap;}
-.desc .jibun {font-size: 11px;color: #888;margin-top: -2px;}
+.info .close:hover 
+{   cursor: pointer;
+}
+.info .body 
+{   position: relative;
+    margin: 10px 0 0 10px;
+    overflow: hidden;
+    word-break: normal;
+}
+.info .desc 
+{   
+    position: relative;
+    margin: 5px 0 0 0px;
+    height: 75px;
+    word-break: normal;
+    line-height: normal;
+}
+.desc .ellipsis 
+{   
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    
+}
+.desc .recycle 
+{   
+    font-size: 36px;
+
+    height: 75px;
+    line-height: normal;
+    text-align: center; 
+    
+}
+.desc .jibun 
+{   font-size: 11px;
+    color: #888;
+    margin-top: -2px;
+}
 /* .info .img {position: absolute;top: 6px;left: 5px;width: 73px;height: 71px;border: 1px solid #ddd;color: #888;overflow: hidden;} */
-.info:after {content: '';position: absolute;margin-left: -12px;left: 50%;bottom: 0;width: 22px;height: 12px;background: url('https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/vertex_white.png')}
-.info .link {color: #5085BB;}
+.info:after 
+{   
+    /* content: '';
+    position: absolute;
+    margin-left: -12px;
+    left: 50%;
+    bottom: 0;
+    width: 22px;
+    height: 12px; */
+    /* background: url('https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/vertex_white.png') */
+}
+.info .link
+{   color: #5085BB;
+}
