--- a/src/Component/NavigationBar/NavBar.css
+++ b/src/Component/NavigationBar/NavBar.css
@@ -1,16 +1,57 @@
-.NavBar {
+/*.NavBar {*/
+/*    position: absolute;*/
+/*    z-index: 999;*/
+/*    width: 100vw;*/
+/*    height: 100px;*/
+/*    background: black;*/
+/*    display: flex;*/
+/*    justify-content: start;*/
+/*    align-items: center;*/
+/*}*/
+.menu-container {
     position: absolute;
-    z-index: 999;
-    width: 100vw;
-    height: 3.125rem;
-    background: #eee;
+    top: 10px;
+    left: 20px;
+    z-index: 9999;
     display: flex;
-    justify-content: start;
-    align-items: center;
+    flex-direction: column;
+    width: 380px;
+    height: 80vh;
 }
 
-.menu-bars {
-    margin-left: 2rem;
+.search-box {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
     font-size: 2rem;
-    background: none;
+    width: 100%;
+    padding: 20px;
+    background: #fff;
+    border-radius: 20px;
+
+}
+
+.input-texts {
+    margin-left: 30px;
+    height: 34px;
+    width: 300px;
+    padding: 0 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    box-sizing: border-box;
+    outline: none;
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075);
+    font-size: 16px;
+}
+
+.content-box {
+    box-sizing: border-box;
+    border: 1px solid;
+    width: 100%;
+    max-height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
