--- a/src/Component/NavigationBar/NavBar.css
+++ b/src/Component/NavigationBar/NavBar.css
@@ -1,57 +1,123 @@
-/*.NavBar {*/
+/*!*.NavBar {*!*/
+/*!*    position: absolute;*!*/
+/*!*    z-index: 999;*!*/
+/*!*    width: 100vw;*!*/
+/*!*    height: 100px;*!*/
+/*!*    background: black;*!*/
+/*!*    display: flex;*!*/
+/*!*    justify-content: start;*!*/
+/*!*    align-items: center;*!*/
+/*!*}*!*/
+/*.menu-container {*/
 /*    position: absolute;*/
-/*    z-index: 999;*/
-/*    width: 100vw;*/
-/*    height: 100px;*/
-/*    background: black;*/
+/*    top: 10px;*/
+/*    left: 20px;*/
+/*    z-index: 9999;*/
 /*    display: flex;*/
-/*    justify-content: start;*/
-/*    align-items: center;*/
+/*    flex-direction: column;*/
+/*    width: 380px;*/
 /*}*/
-.menu-container {
+
+/*.search-box {*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*    justify-content: space-between;*/
+
+/*    font-size: 2rem;*/
+/*    width: 100%;*/
+/*    padding: 20px;*/
+/*    background: #fff;*/
+/*    border-radius: 20px;*/
+
+/*}*/
+
+/*.input-texts {*/
+/*    margin-left: 30px;*/
+/*    height: 34px;*/
+/*    width: 300px;*/
+/*    padding: 0 10px;*/
+/*    border: 1px solid #ddd;*/
+/*    border-radius: 5px;*/
+/*    box-sizing: border-box;*/
+/*    outline: none;*/
+/*    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075);*/
+/*    font-size: 16px;*/
+/*}*/
+
+/*.content-box {*/
+/*    box-sizing: border-box;*/
+/*    border: 1px solid;*/
+/*    width: 100%;*/
+/*    max-height: 100%;*/
+/*    display: flex;*/
+/*    justify-content: center;*/
+/*    align-items: center;*/
+/*    flex-direction: column;*/
+/*}*/
+.wrapper {
     position: absolute;
     top: 10px;
     left: 20px;
-    z-index: 9999;
+    z-index: 999;
+
     display: flex;
     flex-direction: column;
-    width: 380px;
-    height: 80vh;
 }
 
-.search-box {
+.menu-container {
     display: flex;
+    justify-content: start;
     align-items: center;
-    justify-content: space-between;
+    font-size: 20px;
 
-    font-size: 2rem;
-    width: 100%;
-    padding: 20px;
-    background: #fff;
-    border-radius: 20px;
-
-}
-
-.input-texts {
-    margin-left: 30px;
-    height: 34px;
     width: 300px;
-    padding: 0 10px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    box-sizing: border-box;
-    outline: none;
-    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075);
-    font-size: 16px;
+    background: white;
+    padding-left: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 15px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.075);
+
+    z-index: 99;
 }
 
-.content-box {
-    box-sizing: border-box;
-    border: 1px solid;
-    width: 100%;
-    max-height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+.menu-container .div-line {
+    border-left: 1px solid #eee;
+    height: 20px;
+    margin: 0 5px;
 }
+
+.menu-container .keyword-input {
+    width: 250px;
+
+    outline: none;
+    box-sizing: border-box;
+    border: 1px solid #ddd;
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075);
+    border-radius: 5px;
+
+    height: 20px;
+    padding: 0 10px;
+}
+
+.keyword-input:focus {
+    border-color: #51a7e8;
+}
+
+.content-wrapper {
+
+    position: absolute;
+    top: 30px;
+
+    min-height: 50px;
+    width: 100%;
+    background: white;
+
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+}
+
+
+
+
+
