--- a/src/Component/NavigationBar/NavBar/NavBar.css
+++ b/src/Component/NavigationBar/NavBar/NavBar.css
@@ -54,7 +54,7 @@
 /*    align-items: center;*/
 /*    flex-direction: column;*/
 /*}*/
-.wrapper {
+.nav-wrapper {
     position: absolute;
     top: 10px;
     left: 20px;
@@ -62,6 +62,8 @@
 
     display: flex;
     flex-direction: column;
+
+
 }
 
 .menu-container {
@@ -76,7 +78,7 @@
     padding-top: 10px;
     padding-bottom: 10px;
     border-radius: 15px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.075);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.095);
 
     z-index: 99;
 }
@@ -104,17 +106,19 @@
     border-color: #51a7e8;
 }
 
-.content-wrapper {
-
+#content-wrapper {
     position: absolute;
     top: 30px;
-
-    min-height: 50px;
     width: 100%;
     background: white;
-
+    min-height: 50px;
+    max-height: 400px;
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
+
+    padding-top: 30px;
+    padding-bottom: 10px;
+    overflow-y: auto;
 }
 
 
