--- a/src/Component/NavigationBar/SideBar/DailyInform/DailyInform.css
+++ b/src/Component/NavigationBar/SideBar/DailyInform/DailyInform.css
@@ -1,10 +1,10 @@
 .daily-inform-container {
 
-    width: 100%;
+    width: 80%;
     border-top: 1px solid #d3d3d3;
     border-bottom: 1px solid #d3d3d3;
     border-radius: 10px;
-    margin: 10px 0;
+    margin: 10px auto;
 
     box-shadow: 0 0 20px 20px rgba(0, 0, 0, 0.09);
 }
@@ -34,9 +34,9 @@
 }
 
 .daily-inform-container .daily-inform-body > img {
-    width: 60px;
-    height: 60px;
-    margin-left: 10px;
+    width: 50px;
+    height: 50px;
+    margin-left: 20px;
     margin-right: 30px;
 }
 
