--- a/src/Component/NavigationBar/SideBar/WeeklyInform/WeeklyInform.css
+++ b/src/Component/NavigationBar/SideBar/WeeklyInform/WeeklyInform.css
@@ -1,7 +1,12 @@
 .weekly-inform-container {
     margin-top: 30px;
     width: 100%;
-
     border: 1px solid #d3d3d3;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    flex-flow: row wrap;
 }
 
