--- a/src/Component/NavigationBar/SideBar/WeeklyInform/WeeklyInform.css
+++ b/src/Component/NavigationBar/SideBar/WeeklyInform/WeeklyInform.css
@@ -1,12 +1,41 @@
 .weekly-inform-container {
     margin-top: 30px;
+    padding-left: 10px;
     width: 100%;
     border: 1px solid #d3d3d3;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    flex-flow: row wrap;
+    display: grid;
+
+    /*grid-template-columns: 150px 150px;*/
+    grid-template-areas:
+       "header header header header"
+		" . . . ."
+        ".  b b b";
+
+}
+
+.weekly-inform-container:nth-child(1) {
+    grid-area: header;
+}
+.weekly-inform-container:nth-child(2) {
+    grid-area: header;
+}
+.weekly-inform-container:nth-child(3) {
+    grid-area: header;
+}
+.weekly-inform-container:nth-child(4) {
+    grid-area: header;
+}
+.weekly-inform-container:nth-child(5) {
+    grid-area: b;
+    place-items: center start;
+}
+.weekly-inform-container:nth-child(6) {
+    grid-area: b;
+    grid-column: span 2;
+}
+.weekly-inform-container:nth-child(7) {
+    grid-area: b;
+    grid-column: span 2;
 }
 
