연락처 form 추가

--- a/src/Component/NavigationBar/NavBar.css
+++ b/src/Component/NavigationBar/NavBar.css
@@ -90,8 +90,8 @@
 }
 
 .menu-container .keyword-input {
-    width: 250px;
-
+    width: 230px;
+    font-size: 15px;
     outline: none;
     box-sizing: border-box;
     border: 1px solid #ddd;
