--- a/src/Component/NavigationBar/SideBar/SideBar.css
+++ b/src/Component/NavigationBar/SideBar/SideBar.css
@@ -1,6 +1,6 @@
 .nav-menu {
     background: #eee;
-    width: 510px;
+    width: 28%;
     height: 100vh;
     display: flex;
     justify-content: center;
