--- a/src/Component/NavigationBar/SideBar/ContactForm/ContactForm.css
+++ b/src/Component/NavigationBar/SideBar/ContactForm/ContactForm.css
@@ -1,8 +1,7 @@
-.contact-form-card {
+.contact-form {
     flex: 1;
     width: 100%;
     margin: 0;
-    border-radius: 10px;
     font-size: 15px;
 }
 
