--- a/src/Component/NavigationBar/NavBar.css
+++ b/src/Component/NavigationBar/NavBar.css
@@ -59,28 +59,35 @@
     top: 10px;
     left: 20px;
     z-index: 999;
-
+    width: 300px;
     display: flex;
     flex-direction: column;
 
-
+    border-top-right-radius: 15px;
+    border-top-left-radius: 15px;
 }
 
 .menu-container {
+    position: absolute;
     display: flex;
     justify-content: start;
     align-items: center;
     font-size: 20px;
 
-    width: 300px;
+    width: 100%;
     background: white;
     padding-left: 20px;
     padding-top: 10px;
     padding-bottom: 10px;
-    border-radius: 15px;
+    border-top-right-radius: 15px;
+    border-top-left-radius: 15px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.095);
 
     z-index: 99;
+}
+
+.menu-container:first-child {
+    cursor: pointer;
 }
 
 .menu-container .div-line {
@@ -107,20 +114,44 @@
 }
 
 #content-wrapper {
-    position: absolute;
-    top: 30px;
     width: 100%;
     background: white;
     min-height: 50px;
     max-height: 400px;
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
 
     padding-top: 30px;
     padding-bottom: 10px;
     overflow-y: auto;
+    margin-top: 15px;
+    transition: all 0.3s;
 }
 
+#content-wrapper#content-wrapper-disabled {
+    visibility: hidden;
+    transition: all 2s;
+}
+
+.content-fold {
+    width: 100%;
+
+    font-size: 20px;
+    padding-left: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075);
+    background: white;
+}
+.content-fold.folded {
+    position: absolute;
+    top: 35px;
+}
+
+.content-fold > * {
+    cursor: pointer;
+}
 
 
 
