--- a/src/Component/NavigationBar/SideBar/WeeklyInform/DayInfoContainer.css
+++ b/src/Component/NavigationBar/SideBar/WeeklyInform/DayInfoContainer.css
@@ -3,12 +3,12 @@
     padding-left: 10px;
 
     display: grid;
+    grid-template-columns: repeat(4, minmax(100px, auto));
+    grid-template-rows: repeat(2, 1fr);
+    grid-auto-flow: dense;
 
-    grid-template-areas:
-       "header header header header"
-		" . . . ."
-        ".  b b b";
-
+    align-items: center;
+    justify-items: center;
 }
 
 .day-info-container:nth-child(1) {
@@ -31,4 +31,22 @@
 }
 .day-info-container:nth-child(7) {
     grid-area: b;
+}
+@media screen and (min-width: 1500px) and (max-width: 1870px) {
+    .day-info-container {
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        grid-gap: 2px;
+    }
+}
+
+@media screen and (min-width: 1300px) and (max-width: 1500px) {
+    .day-info-container {
+        grid-template-columns: repeat(2, minmax(100px, auto));
+        grid-template-rows: repeat(4, minmax(100px, auto));
+        grid-gap: 2px;
+
+        align-items: center;
+        justify-items: center;
+    }
 }
