사이브바 반응형

--- a/src/Component/NavigationBar/SideBar/ContactForm/ContactForm.css
+++ b/src/Component/NavigationBar/SideBar/ContactForm/ContactForm.css
@@ -1,8 +1,9 @@
-.contact-form {
+.contact-form.card {
     flex: 1;
     width: 100%;
     margin: 0;
     font-size: 15px;
+    border-radius: 5px;
 }
 
 .contact-form-card-body {
@@ -11,3 +12,20 @@
     align-items: center;
 }
 
+@media screen and (min-width: 1300px) and (max-width: 1870px) {
+    .contact-form-card-body {
+        flex-direction: column;
+    }
+    .contact-form-card-content:first-child {
+        margin-bottom: 8px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .contact-form-card-body {
+        flex-direction: column;
+    }
+    .contact-form-card-content:first-child {
+        margin-bottom: 8px;
+    }
+}
