--- a/src/Component/NavigationBar/NavBar.css
+++ b/src/Component/NavigationBar/NavBar.css
@@ -1,59 +1,4 @@
-/*!*.NavBar {*!*/
-/*!*    position: absolute;*!*/
-/*!*    z-index: 999;*!*/
-/*!*    width: 100vw;*!*/
-/*!*    height: 100px;*!*/
-/*!*    background: black;*!*/
-/*!*    display: flex;*!*/
-/*!*    justify-content: start;*!*/
-/*!*    align-items: center;*!*/
-/*!*}*!*/
-/*.menu-container {*/
-/*    position: absolute;*/
-/*    top: 10px;*/
-/*    left: 20px;*/
-/*    z-index: 9999;*/
-/*    display: flex;*/
-/*    flex-direction: column;*/
-/*    width: 380px;*/
-/*}*/
 
-/*.search-box {*/
-/*    display: flex;*/
-/*    align-items: center;*/
-/*    justify-content: space-between;*/
-
-/*    font-size: 2rem;*/
-/*    width: 100%;*/
-/*    padding: 20px;*/
-/*    background: #fff;*/
-/*    border-radius: 20px;*/
-
-/*}*/
-
-/*.input-texts {*/
-/*    margin-left: 30px;*/
-/*    height: 34px;*/
-/*    width: 300px;*/
-/*    padding: 0 10px;*/
-/*    border: 1px solid #ddd;*/
-/*    border-radius: 5px;*/
-/*    box-sizing: border-box;*/
-/*    outline: none;*/
-/*    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075);*/
-/*    font-size: 16px;*/
-/*}*/
-
-/*.content-box {*/
-/*    box-sizing: border-box;*/
-/*    border: 1px solid;*/
-/*    width: 100%;*/
-/*    max-height: 100%;*/
-/*    display: flex;*/
-/*    justify-content: center;*/
-/*    align-items: center;*/
-/*    flex-direction: column;*/
-/*}*/
 .nav-wrapper {
     position: absolute;
     top: 10px;
@@ -93,11 +38,14 @@
 .menu-container .div-line {
     border-left: 1px solid #eee;
     height: 20px;
-    margin: 0 5px;
+    margin: 0 10px;
+}
+.menu-container .search-form {
+    width: 80%;
 }
 
 .menu-container .keyword-input {
-    width: 230px;
+    width: 100%;
     font-size: 15px;
     outline: none;
     box-sizing: border-box;
@@ -151,6 +99,15 @@
 
 .content-fold > * {
     cursor: pointer;
+}
+
+@media screen and (max-width: 500px) {
+    .contact-form-card-body {
+        flex-direction: column;
+    }
+    .contact-form-card-content:first-child {
+        margin-bottom: 8px;
+    }
 }
 
 
