--- a/src/Component/Loading/Loading.css
+++ b/src/Component/Loading/Loading.css
@@ -6,7 +6,7 @@
 
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
 }
 
@@ -20,7 +20,7 @@
     background: white;
     border-radius: 20px;
 
-    margin: 100px 0;
+    margin:  0;
 }
 
 .card .header {
