마커 인폼 완성

--- a/src/Component/InformationCard/InformCss/clean.css
+++ b/src/Component/InformationCard/InformCss/clean.css
@@ -92,23 +92,14 @@
             text-align: center;
         
         }
-        .desc .jibun
+       
+        .desc .runtime
         {   font-size: 11px;
-            color: #888;
+            color: red;
             margin-top: -2px;
         }
         /* .info .img {position: absolute;top: 6px;left: 5px;width: 73px;height: 71px;border: 1px solid #ddd;color: #888;overflow: hidden;} */
-        .info:after
-        {
-            /* content: '';
-            position: absolute;
-            margin-left: -12px;
-            left: 50%;
-            bottom: 0;
-            width: 22px;
-            height: 12px; */
-            /* background: url('https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/vertex_white.png') */
-        }
+
         .info .link
         {   color: #5085BB;
         }
