--- a/src/Component/InformationCard/InformCss/CustomOverlay.css
+++ b/src/Component/InformationCard/InformCss/CustomOverlay.css
@@ -1,3 +1,4 @@
+
 .wrap 
 {   position: absolute;
     left: 0;bottom: 40px;
@@ -104,3 +105,13 @@
     font-size: 10px;
     color: #5085BB;
 }
+.info:after 
+{
+    content: '';
+    position: absolute;
+    margin-left: -12px;
+    left: 50%;
+    bottom: 0;
+    width: 22px;
+    height: 12px;
+    background: url('https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/vertex_white.png')}
