--- a/src/Component/NavigationBar/NavBar.css
+++ b/src/Component/NavigationBar/NavBar.css
@@ -102,6 +102,21 @@
     cursor: pointer;
 }
 
+
+.reset-button:hover {
+    animation: animate 1s linear infinite;
+}
+
+@keyframes animate {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+
 @media screen and (max-width: 500px) {
     .contact-form-card-body {
         flex-direction: column;
